# leo-work

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  start-leo-work.bat  tailwind.config.js  tsconfig.json  tsconfig.sidecar.json  vite.config.ts
.github/workflows/: release.yml
docs/: CROSS-PLATFORM.md  lesson-learned-git-token.md  maintenance-skill.md  worklog.md  功能介紹與用法.docx  功能介紹與用法.html
scripts/: assemble-sidecar.mjs  setup.ps1
src/: App.tsx  index.css  main.tsx  server.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AnalysisPanel.tsx  AudioSourcePanel.tsx  ChatAssistant.tsx  HistoryRail.tsx  MemoryChat.tsx  MemorySearch.tsx  RouterPanel.tsx  SettingsModal.tsx  TranscriptPanel.tsx  VuMeter.tsx  Workspace.tsx
src/lib/: api.ts  audioApi.ts  audioRouterApi.ts  backup.ts  exporters.ts  recorder.ts  theme.ts  updater.ts
src/services/: AppConfig.ts  AudioDecoder.ts  AudioOutputSwitch.ts  AudioRepair.ts  ClaudeService.ts  EmbeddingService.ts  FallbackLlmService.ts  GeminiLiveService.ts  GeminiLlmService.ts  GroqLlmService.ts  MeetingStore.ts  OllamaLlmService.ts  SecurityManager.ts  TextSplitter.ts  VectorStore.ts  analyzePipeline.ts  relevance.ts  transcribePipeline.ts  translatePipeline.ts  wavChunk.ts
src/services/__tests__/: analyzePipeline.test.ts  audioOutputSwitch.test.ts  groq-transcribe.test.ts  relevance.test.ts  (+5 more)
src/shared/: types.ts
src/store/: audioStore.ts
(+30 files in other folders)
