[package]
name = "leo-work"
version = "0.1.0"
description = "Leo work 桌面外殼"
authors = ["Hsinchun Capital"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "leo_work_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"   # 啟動 / 管理 Node sidecar
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
